fix front wrap, add background

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -31,12 +31,13 @@
 
 // READ MORE links
 .mdl-button.mdl-button--colored {
-	color: darkgrey;
+	color: $blue-invite;
 }
 
 // accomdations, location, photos etc
 .mdl-card__title-text, .mdl-card__title a {
-	color: white;
+	color: $grey-invite-dark;
+  font-size: 150%;
 }
 //Some folks are getting married!
 div.mdl-card__supporting-text h4 {
@@ -44,8 +45,6 @@ div.mdl-card__supporting-text h4 {
 	font-weight: bold;
 	line-height: 150%;  /*  melissa and seth are going to be married...*/
 	text-align: center;
-	padding: 1%;
-	margin: 1%;
 }
 // footer
 .mdl-mega-footer {
@@ -82,10 +81,11 @@ div.mdl-card__supporting-text h4 {
     align-items: center;
     margin: auto;
   }
-		span {
-				color: #9F9F9F;
-		}
+	span {
+		color: #9F9F9F;
+	}
 		p {
+      color: $grey-invite-dark;
 			margin: 5%;
 
 		}
@@ -115,13 +115,9 @@ div.mdl-card__supporting-text h4 {
   }
   .mdl-card__supporting-text {
     -webkit-box-flex: 1;
-    -webkit-flex-grow: 1;
     -ms-flex-positive: 1;
-    flex-grow: 1;
     color: inherit;
     width: 90%;
-		margin: 1%;
-		padding: 1%;
 		display: flex;
     flex-direction: column;
     justify-content: center;
